include/altdss/capi/dss.h

    /*! 
    Rated voltage (kV) at the input of the inverter while the storage is discharging
    */
    ALTDSS_CAPI_DLL void Storages_Set_kVDC(double Value);
    /*! 
    Get/set the requested kW value. Final kW is subjected to the inverter ratings.
    */
    ALTDSS_CAPI_DLL void Storages_Set_kW(double Value);
    /*! 
    Rated Storage capacity in kWh.
    */
    ALTDSS_CAPI_DLL void Storages_Set_kWhRated(double Value);
    /*! 
    kW rating of power output. Base for Loadshapes when DispMode=Follow. Sets kVA property if it has not been specified yet.
    */
    ALTDSS_CAPI_DLL void Storages_Set_kWRated(double Value);
    /*! 
    Limits current magnitude to Vminpu value for both 1-phase and 3-phase Storage similar to Generator Model 7.
    For 3-phase, limits the positive-sequence current but not the negative-sequence."
    */
    ALTDSS_CAPI_DLL void Storages_Set_LimitCurrent(uint16_t Value);
    /*! 
    Get/set the requested PF value.
    */
    ALTDSS_CAPI_DLL void Storages_Set_PF(double Value);
    /*! 
    Tolerance (%) for the closed loop controller of the inverter
    */
    ALTDSS_CAPI_DLL void Storages_Set_PITol(double Value);
    /*! 
    Indicates the voltage level (%) respect to the base voltage level for which the Inverter will operate.
    */
    ALTDSS_CAPI_DLL void Storages_Set_SafeVoltage(double Value);
    /*! 
    Time of day in fractional hours (0230 = 2.5) at which Storage element will automatically go into charge state.
    */
    ALTDSS_CAPI_DLL void Storages_Set_TimeChargeTrig(double Value);
    /*! 
    Indicates if the reactive power generation/absorption does not respect the inverter status
    */
    ALTDSS_CAPI_DLL void Storages_Set_VarFollowInverter(int32_t Value);