src/CAPI/CAPI_Storages.pas


    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        elem.SetDouble(ord(TStorageProp.kvar), Value, []);
        Exit;
    end;
    elem.kvarRequested := Value;
end;
//------------------------------------------------------------------------------
procedure Storages_Set_kVDC(Value: Double); CDECL;
var
    elem: TStorageObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        elem.SetDouble(ord(TStorageProp.kVDC), Value, []);
        Exit;
    end;
    elem.dynVars.RatedVDC := Value * 1000;
end;
//------------------------------------------------------------------------------
procedure Storages_Set_kW(Value: Double); CDECL;
var
    elem: TStorageObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        elem.SetDouble(ord(TStorageProp.kW), Value, []);
        Exit;
    end;
    elem.SetkW(Value);
end;
//------------------------------------------------------------------------------
procedure Storages_Set_kWhRated(Value: Double); CDECL;
var
    elem: TStorageObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        elem.SetDouble(ord(TStorageProp.kWhrated), Value, []);
        Exit;
    end;
    elem.StorageVars.kWhrating := Value;
end;
//------------------------------------------------------------------------------
procedure Storages_Set_kWRated(Value: Double); CDECL;
var
    elem: TStorageObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        elem.SetDouble(ord(TStorageProp.kWRated), Value, []);
        Exit;
    end;
    elem.StorageVars.kWrating := Value;
end;
//------------------------------------------------------------------------------
procedure Storages_Set_LimitCurrent(Value: TAPIBoolean); CDECL;
var
    elem: TStorageObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        elem.SetInteger(ord(TStorageProp.LimitCurrent), Integer(Value), []);
        Exit;
    end;
    elem.CurrentLimited := Value;
end;
//------------------------------------------------------------------------------
procedure Storages_Set_PF(Value: Double); CDECL;
var
    elem: TStorageObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;

    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        elem.SetDouble(ord(TStorageProp.pf), Value, []);
        Exit;
    end;
    elem.PFnominal := Value;
end;
//------------------------------------------------------------------------------
procedure Storages_Set_PITol(Value: Double); CDECL;
var
    elem: TStorageObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        elem.SetDouble(ord(TStorageProp.PITol), Value, []);
        Exit;
    end;
    elem.dynVars.CtrlTol := Value / 100;
end;
//------------------------------------------------------------------------------
procedure Storages_Set_SafeVoltage(Value: Double); CDECL;
var
    elem: TStorageObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        elem.SetDouble(ord(TStorageProp.SafeVoltage), Value, []);
        Exit;
    end;
    elem.dynVars.SMThreshold := Value;
end;
//------------------------------------------------------------------------------
procedure Storages_Set_TimeChargeTrig(Value: Double); CDECL;
var
    elem: TStorageObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        elem.SetDouble(ord(TStorageProp.TimeChargeTrig), Value, []);
        Exit;
    end;
    elem.ChargeTime := Value;
end;
//------------------------------------------------------------------------------
procedure Storages_Set_VarFollowInverter(Value: Integer); CDECL;
var
    elem: TStorageObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        elem.SetInteger(ord(TStorageProp.VarFollowInverter), Value, []);
        Exit;
    end;
    elem.VarFollowInverter := (Value <> 0);
end;
//------------------------------------------------------------------------------
end.
